# codenames

./: .pre-commit-config.yaml  README.md  alembic.ini  auditroom.css  auditroom.html  pyproject.toml
alembic/: env.py
codenames/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
codenames/db/: base.py  config.py  utils.py
codenames/db/dao/: create_game.py  dummy_dao.py
codenames/db/migrations/: env.py
codenames/db/migrations/versions/: 2023-04-29-22-18_98a6fbb21f47.py  2023-05-03-04-04_d0a42ba96c41.py  2023-05-03-09-32_ab4278916842.py  2023-05-04-22-01_7f806992adde.py  2023-05-08-06-20_e8aaf4b987f6.py  2023-05-08-07-25_08e21a17084c.py  2023-05-08-19-42_2fe1202af159.py  2023-05-08-19-43_2105958436b6.py  2023-05-10-05-20_8aa98c300167.py  2023-05-10-05-29_cbab0c3a4b09.py  2023-05-10-05-52_62d24484c5b6.py  (+7 more)
codenames/db/models/: __init__.py  dummy_model.py  game.py  user.py  webhook.py
codenames/services/: __init__.py
codenames/ssl-certificate/: cert.pem  key.pem
codenames/static/audit/: audit_log_new.html
codenames/tests/: __init__.py  test_dummy.py
codenames/web/: __init__.py  application.py  lifetime.py
codenames/web/api/: __init__.py  router.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/app/: constants.js  root.jsx
frontend/app/routes/: _index.jsx  auth.login.jsx  auth.register.jsx  gamepage.jsx  playgame.jsx
frontend/app/store/: auth.js  card.js  game.js  playerType.js  room.js
frontend/app/styles/: gamepage.room.css  global.css  index.room.css  playgame.room.css
(+23 files in other folders)
